<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/editNombre"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
           />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcula"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"

        />
        <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:text="@string/nota1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"

        />

        <EditText
                android:id="@+id/nota_1"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="numberDecimal"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"

        />
        <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/nota2"
                android:layout_gravity="center"
                android:textAlignment="center"

        />
        <EditText
                android:id="@+id/nota_2"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:inputType="numberDecimal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"

        />
        <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/nota3"
                android:layout_gravity="center"
                android:textAlignment="center"

        />
        <EditText
                android:id="@+id/nota_3"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="numberDecimal"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"

        />
        <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:text="@string/nota4"
                android:textAlignment="center"
                android:layout_gravity="center"

        />
        <EditText
                android:id="@+id/nota_4"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:inputType="numberDecimal"

        />


    </LinearLayout>
    <Button
            android:id="@+id/Calcular"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/calcula"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />


</LinearLayout>